Fix POWER_CACHE bug